[package]
name = "futures-enum"
version = "0.1.17"
edition = "2018"
rust-version = "1.36"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/futures-enum"
keywords = ["async", "future", "futures", "derive", "enum"]
categories = ["asynchronous", "no-std", "rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
#[derive(Future, Stream, Sink, AsyncRead, AsyncWrite, AsyncSeek, AsyncBufRead)] for enums.
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tests/doc"]

[lib]
proc-macro = true

[features]
default = ["renamed"]
# Enable to allow using this crate as a renamed dependency
renamed = ["find-crate"]

# Note: futures-* are public dependencies.
[dependencies]
derive_utils = { version = "0.12" }
quote = "1"
syn = "1"

find-crate = { version = "0.6", optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
macrotest = { git = "https://github.com/taiki-e/macrotest.git", rev = "f3d3aa5" } # https://github.com/eupn/macrotest/pull/69
rustversion = "1"
